--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "zournel",
+  "name": "zournel-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,12 +13,13 @@
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
     "lucide-react": "^0.562.0",
-    "canvas-confetti": "1.9.2"
+    "canvas-confetti": "^1.9.2"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.3"
   }
 }
